--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <div class="card border-gradient border-gradient-purple">
                     <p class="type">
                         Morning Glitter+Ash Service in the Park</p>
-                    <p class="details">Wednesday, March&nbsp;2 at 7:00am<br>
+                    <p class="details">Wednesday, March&nbsp;2 at 7:00am&ndash;&#8288;7:30am<br>
                         Pioneer Park, at the corner of 15th and Pine<br>
                         801 15th St. W., Hastings, MN 55033<br><br>
-                        15-minute service followed by imposition of ashes. Backup location in case of bad weather: First
+                       Short service followed by imposition of ashes. Backup location in case of bad weather: First
                         Presbyterian Church, Hastings.
                     </p>
                 </div>
