--- a/index.html
+++ b/index.html
@@ -206,6 +206,19 @@
             <p> Everyone is welcome. You do not need to be Christian or a member of the LGBTQ+ community to
                 participate.
             </p>
+            
+             <h2>Organizers and supporters</h2>
+            <p>
+               <p>Leaders of Glitter Ash Wednesday events from the local faith community include:</p>
+               <ul>
+                   <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
+                   <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
+                   <li>Rev. Steve Robertson, Pastor, First Presbyterian Church, Hastings</li>
+                </ul>
+                <p>Supporting local organizations include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.>
+               
+
+            </p>
 
 
             <h2>More resources</h2>
