--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </p>
           
             <h2>Who can participate?</h2>
-            <p> Everyone is welcome. You do not need to be Christian or a member of the LGBTQ+ community to
+            <p> Everyone is welcome! You do not need to be Christian or a member of the LGBTQ+ community to
                 participate.
             </p>
 
