--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </li>
 
 
-                <li>Need a flyer to help get word out? <a type="application/pdf"
+                <li id="flyer">Need a flyer to help get word out? <a type="application/pdf"
                         href="GlitterAshWednesdayFlyer.pdf">Here's a
                         PDF.</a></li>
             </ul>
