--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </p> -->
 
           
-            <h2>Organizers and supporters</h2>
+            <h2><a name="supporters">Organizers and supporters</a></h2>
             <p>
                <p>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
                <ul>
