--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
             </p> -->
 
           
-            <h2><a name="supporters">Organizers and supporters</a></h2>
+            <h2>Organizers and supporters</h2>
             <p>
-               <p>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
+               <p><a name="supporters"></a>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                    <li>Rev. Steve Robertson, Pastor, First Presbyterian Church, Hastings</li>
                 </ul>
-                <p>Other supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
+                <p>Other organizers and supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
             </p>
           
             <h2>Who can participate?</h2>
