--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         Wednesday, March&nbsp;2, at 6:46pm<br>
                         All Saints Lutheran Church, ELCA<br>
                         8100 Belden Blvd, Cottage Grove, MN 55016<br><br>
-                        This service has two stations: one with glitter+ashes; another with only ashes.
+                        This service has two stations: one with ashes; another with glitter+ashes.
                     </p>
                 </div>
             </div>
@@ -195,13 +195,13 @@
           
             <h2>Organizers and supporters</h2>
             <p>
-               <p><a name="supporters"></a>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
+               <p>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                    <li>Rev. Steve Robertson, Pastor, First Presbyterian Church, Hastings</li>
                 </ul>
-                <p>Other organizers and supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
+                <p>Other supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
             </p>
           
             <h2>Who can participate?</h2>
@@ -227,7 +227,7 @@
                 </li>
 
 
-                <li><a name="flyer">Need a flyer to help get word out? </a><a type="application/pdf"
+                <li><a name="flyer"></a>Need a flyer to help get word out? </a><a type="application/pdf"
                         href="GlitterAshWednesdayFlyer.pdf">Here's a
                         PDF.</a></li>
             </ul>
