--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <h1>What is Glitter Ash Wednesday?</h1>
 
-            <p>Glitter Ash Wednesday is a special type of Ash Wednesday service created especially by and for
+            <p>Glitter Ash Wednesday is a special type of Ash Wednesday service created by and especially for
                 the transgender and LGBTQ+
                 community and allies. Worshippers are offered a
                 mixture of ashes and glitter (or only ashes, if desired). You can be marked
