--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 the U.S., the U.K., and Canada since its beginnings in 2017.
             </p>
             <p>
-                Glitter Ash Wednesday imagines a world of transformation, courage, and resistance and invites us all
+                Glitter Ash Wednesday imagines a world of transformation, courage, and resistance and invites us 
                 to
                 bear
                 the mark of inclusion and hope.
