--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
-                   <li>Rev. Steve Robertson, Pastor, First Presbyterian Church, Hastings</li>
+                   <li>Rev. Steve Robertson, First Presbyterian Church, Hastings</li>
                 </ul>
                 <p>Other supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
             </p>
