--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@400;500;600;800&display=swap"
         rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Finger+Paint&display=swap" rel="stylesheet">
-
-
+  
 
 
 </head>
@@ -231,7 +229,7 @@
                         href="GlitterAshWednesdayFlyer.pdf">Here's a
                         PDF.</a></li>
             </ul>
-            <p>Questions? <a href="mailto:val@aftonindivisible.com">Get in touch!</a></p>
+            <p>Questions? <a href="mailto:val@aftonindivisible.org">Get in touch!</a></p>
 
         </div>
 
