--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           
             <h2>Organizers and supporters</h2>
             <p>
-               <p>Supporters in the local faith community who will lead Glitter Ash Wednesday include:</p>
+               <p>Supporters in the local faith community who will lead Glitter Ash Wednesday events include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
