--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@400;500;600;800&display=swap"
         rel="stylesheet">
 
-  
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Finger+Paint&display=swap" rel="stylesheet">
+
+
 
 
 </head>
@@ -163,7 +165,7 @@
                 exclude queer people from Christianity or have perpetrated harm against the LGBTQ+ community. When we
                 participate in Glitter Ash Wednesday we proudly stand in the long tradition
                 of Christians who have fought righteously for the liberation of oppressed people. With this ritual we
-                joyfully claim the power of radical inclusivity and the power of allies standing in solidarity with
+                joyfully claim the power of radical inclusivity and of allies standing in solidarity with
                 targeted communities.</p>
 
 
@@ -225,7 +227,7 @@
                 </li>
 
 
-                <li><a name="flyer"></a>Need a flyer to help get word out? </a><a type="application/pdf"
+                <li><a name="flyer"></a>Need a flyer to help get the word out? </a><a type="application/pdf"
                         href="GlitterAshWednesdayFlyer.pdf">Here's a
                         PDF.</a></li>
             </ul>
