--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
           
             <h2>Organizers and supporters</h2>
             <p>
-               <p>Supporters in the local faith community who will lead Glitter Ash Wednesday events include:</p>
+               <p>Organizers in the local faith community who will lead Glitter Ash Wednesday events include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                    <li>Rev. Steve Robertson, First Presbyterian Church, Hastings</li>
                 </ul>
-                <p>Other supporters include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible.
+                <p>Other organizers include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. Supporting organizations include Hastings Progressives and Transforming Families.
             </p>
           
             <h2>Who can participate?</h2>
