--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
             <p> The ritual offers
                 Christians an invitation to show up, or "come out," as faith affirming and LGBTQ+ affirming.</p>
 
+                <p>&#8216;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8217; says Rev. Michael Le Buhn Jr., one of the event organizers.</p>
+
             <h2>What does it mean?</h2>
             <p>The ritual captures the relationship between Ash Wednesday and Easter, which is the relationship
                 between
