--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p> The ritual offers
                 Christians an invitation to show up, or "come out," as faith affirming and LGBTQ+ affirming.</p>
 
-                <p>&#8216;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8217; says Rev. Michael Le Buhn Jr., one of the event organizers.</p>
+                <p>&#8220;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&&#8220; says Rev. Michael Le Buhn Jr., one of the event organizers.</p>
 
             <h2>What does it mean?</h2>
             <p>The ritual captures the relationship between Ash Wednesday and Easter, which is the relationship
@@ -164,7 +164,7 @@
                 critique
                 of those traditions. Glitter Ash Wednesday centers
                 the LBGTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
-                exclude queer people from Christianity or have perpetrated harm against the LGBTQ+ community. When we
+                exclude queer people from Christianity or have perpetrated harm against the LGBTQ+ community, including the transgender and gender-nonconforming communities. When we
                 participate in Glitter Ash Wednesday we proudly stand in the long tradition
                 of Christians who have fought righteously for the liberation of oppressed people. With this ritual we
                 joyfully claim the power of radical inclusivity and of allies standing in solidarity with
@@ -174,7 +174,7 @@
 
             <h2>Consider choosing a Lenten action</h2>
             <p>
-                Ash Wednesday is the beginning of the season of Lent. It’s common for people to &#8220;give
+                Ash Wednesday is the beginning of the season of Lent. It&#8217;s common for people to &#8220;give
                 something
                 up&#8221;
                 for Lent. It
@@ -230,7 +230,7 @@
 
 
                 <li><a name="flyer"></a>Need a flyer to help get the word out? </a><a type="application/pdf"
-                        href="GlitterAshWednesdayFlyer.pdf">Here's a
+                        href="GlitterAshWednesdayFlyer.pdf">Here&#8220;s a
                         PDF.</a></li>
             </ul>
             <p>Questions? <a href="mailto:val@aftonindivisible.org">Get in touch!</a></p>
