--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="details">Wednesday, March&nbsp;2, at 7:00am&ndash;&#8288;7:30am<br>
                         Pioneer Park, at the corner of 15th and Pine<br>
                         801 15th St. W., Hastings, MN 55033<br><br>
-                       Short service followed by imposition of ashes. Backup location in case of bad weather: First
+                       Short service followed by imposition of ashes. In case of bad weather we'll post an update here and move to First
                         Presbyterian Church, Hastings.
                     </p>
                 </div>
@@ -86,7 +86,7 @@
                     <p class="details">
                         Wednesday, March&nbsp;2, at 10:30am<br>
                         First Presbyterian Church<br>
-                        602 Vermillion St, Hastings, MN 55033
+                        602 Vermillion St., Hastings, MN 55033
                         <br><br>
                         Traditional service, <strong>not</strong> a glitter+ash service.
                     </p>
@@ -163,10 +163,9 @@
                 Glitter Ash Wednesday embraces the power and solemnity of traditional Ash Wednesday rituals and is not a
                 critique
                 of those traditions. Glitter Ash Wednesday centers
-                the LBGTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
-                exclude queer people from Christianity or have perpetrated harm against the LGBTQ+ community, including the transgender and gender-nonconforming communities. When we
-                participate in Glitter Ash Wednesday we proudly stand in the long tradition
-                of Christians who have fought righteously for the liberation of oppressed people. With this ritual we
+                the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
+                exclude that community from Christianity or have perpetrated harm against them. When we
+                participate in Glitter Ash Wednesday we stand with Christians who have fought righteously for the liberation of oppressed people. With this ritual we
                 joyfully claim the power of radical inclusivity and of allies standing in solidarity with
                 targeted communities.</p>
 
