--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                 critique
                 of those traditions. Glitter Ash Wednesday centers
                 the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
-                exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. When we
-                participate in Glitter Ash Wednesday we joyfully claim the power of radical inclusivity and of allies standing in solidarity with
+                exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. With this ritual we joyfully claim the power of radical inclusivity and of allies standing in solidarity with
                 targeted communities.</p> 
 
                 
