--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                     <p class="details">Wednesday, March&nbsp;2, at 7:00am&ndash;&#8288;7:30am<br>
                         Pioneer Park, at the corner of 15th and Pine<br>
                         801 15th St. W., Hastings, MN 55033<br><br>
-                       Short service followed by imposition of ashes. In case of bad weather we'll post an update here and move to First
-                        Presbyterian Church, Hastings.
+                       Short service followed by imposition of ashes. Please wear a mask.</p>
+                       <p>In case of bad weather we'll post an update here and move to First
+                        Presbyterian Church, Hastings.</p>
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-red">
@@ -79,6 +80,7 @@
                         Downtown Hastings, outside Level Up Games<br>
                         120 2nd St. E., Hastings, MN 55033
                     </p>
+                    <p>Please wear a mask.</p>
                 </div>
                 <div class="card border-gradient border-gradient-yellow">
                     <p class="type">
