--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
                     <p class="type">
                         Morning Glitter+Ash Service in the Park</p>
                     <p class="details">Wednesday, March&nbsp;2, at 7:00am&ndash;&#8288;7:30am<br>
-                        Pioneer Park, at the corner of 15th and Pine<br>
-                        801 15th St. W., Hastings, MN 55033<br><br>
-                       Short service followed by imposition of ashes. Mask required. In case of bad weather we'll post an update here and move to First
-                       Presbyterian Church, Hastings.</p>
+                    Pioneer Park, at the corner of 15th and Pine<br>
+                    801 15th St. W., Hastings, MN 55033<br><br>
+                    Short service followed by imposition of ashes.<br><br>
+                    Mask required. In case of bad weather we'll post an update here and move to First
+                    Presbyterian Church, Hastings.</p>
                       
                     </p>
                 </div>
@@ -78,9 +79,10 @@
                     <p class="details">
                         Wednesday, March&nbsp;2, at 9:00am&ndash;&#8288;1:00pm<br>
                         Downtown Hastings, outside Level Up Games<br>
-                        120 2nd St. E., Hastings, MN 55033
+                        120 2nd St. E., Hastings, MN 55033<br><br>
+                        Mask required.
                     </p>
-                    <p>Please wear a mask.</p>
+                  
                 </div>
                 <div class="card border-gradient border-gradient-yellow">
                     <p class="type">
