--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                    <li>Rev. Steve Robertson, First Presbyterian Church, Hastings</li>
                 </ul>
-                <p>Other organizers include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. Supporting organizations include Hastings Progressives and Transforming Families.
+                <p>Other organizers include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families.
             </p>
           
             <h2>Who can participate?</h2>
