--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
             <p> The ritual offers
                 Christians an invitation to show up, or "come out," as faith affirming and LGBTQ+ affirming.</p>
 
-                <p>&#8220;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8221; says Rev. Michael Le Buhn Jr., one of the event organizers.</p>
+                <p>&#8220;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8221; says 
+                    Rev. Michael Le Buhn Jr., an event co-organizer.</p>
 
             <h2>What does it mean?</h2>
             <p>The ritual captures the relationship between Ash Wednesday and Easter, which is the relationship
@@ -183,8 +184,8 @@
                     of those traditions. Glitter Ash Wednesday centers
                     the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
                     exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. When we
-                    participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including all transgender, 
-                    nonbinary, and LGBTQ+ members of our community, 
+                    participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including transgender, 
+                    nonbinary, and LGBTQ+ people, 
                     are wholly sacred and fully welcome to participate in the life of the church.
                 </p>
               
