--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 the circle of life and
                 death.</p>
             <p> The ritual offers
-                Christians an invitation to show up, or "come out," as faith affirming and LGBTQ+ affirming.</p>
+                Christians an invitation to show up, or &#8220;come out,&#8221; as faith affirming and LGBTQ+ affirming.</p>
 
                 <p>&#8220;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8221; says 
                     Rev. Michael Le Buhn Jr., an event co-organizer.</p>
@@ -183,10 +183,10 @@
                     critique
                     of those traditions. Glitter Ash Wednesday centers
                     the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
-                    exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. When we
-                    participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including transgender, 
+                    exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. &#8220;When we
+                    participate in Glitter Ash Wednesday,&#8221; says co-organizer Valerie Stoehr, &#8220;we stand with Christians who unequivocally affirm that all of us, including transgender, 
                     nonbinary, and LGBTQ+ people, 
-                    are wholly sacred and fully welcome to participate in the life of the church.
+                    are wholly sacred and fully welcome to participate in the life of the church.&#8221;
                 </p>
               
 
