--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                     critique
                     of those traditions. Glitter Ash Wednesday centers
                     the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
-                    exclude that community from Christianity or have perpetrated harm against LGBTQ+ people.</p>
+                    exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. Organizers say Glitter Ash Wednesday joyfully claim the power of radical inclusivity and of allies standing in solidarity with
+                    targeted communities.</p>
 
-                    <p>Organizers say Glitter Ash Wednesday joyfully claim the power of radical inclusivity and of allies standing in solidarity with
-                        targeted communities. &#8220;When we
+                    <p>&#8220;When we
                         participate in Glitter Ash Wednesday,&#8221; says co-organizer Valerie Stoehr, &#8220;we stand with Christians who unequivocally affirm that all of us, including transgender, 
                         nonbinary, and LGBTQ+ people, 
                         are wholly sacred and fully welcome to participate in the life of the church.&#8221;</p>
