--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- <img src="images/AftonIndivisibleLogo_Stacked_ForDarkBackground.png" height=30px> -->
                 <!-- <h1>Afton Indivisible</h1>-->
 
-                <h1 class="hero-text1"> On March&nbsp;2 in Hastings, glitter and ashes show support for the LGBTQ+
+                <h1 class="hero-text1"> On March&nbsp;2, glitter and ashes show support for the LGBTQ+
                     community.<br><br>Join us.</h1>
         </section>
     </header>
@@ -185,11 +185,11 @@
                     the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
                     exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. </p>
 
-                    <p>Organizers say Glitter Ash Wednesday joyfully claims the power of radical inclusivity and of allies standing in solidarity with
-                        targeted communities. &#8220;When we
-                        participate in Glitter Ash Wednesday,&#8221; says co-organizer Valerie Stoehr, &#8220;we stand with Christians who unequivocally affirm that all of us, including transgender, 
+                    <p>Glitter Ash Wednesday joyfully claims the power of radical inclusivity and of allies standing in solidarity with
+                        targeted communities. When we
+                        participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including transgender, 
                         nonbinary, and LGBTQ+ people, 
-                        are wholly sacred and fully welcome to participate in the life of the church.&#8221;</p>
+                        are wholly sacred and fully welcome to participate in the life of the church.</p>
               
 
             <h2>Consider choosing a Lenten action</h2>
