--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="card border-gradient border-gradient-purple">
                     <p class="type">
                         Morning Glitter+Ash Service in the Park</p>
-                    <p class="details">Wednesday, March&nbsp;2, at 7:00am&ndash;&#8288;7:30am<br>
+                    <p class="details">Wednesday, March&nbsp;2, at 7:00&ndash;&#8288;7:30 a.m.<br>
                     Pioneer Park, at the corner of 15th and Pine<br>
                     801 15th St. W., Hastings, MN 55033<br><br>
                     Short service followed by imposition of ashes.<br><br>
@@ -77,7 +77,7 @@
                     <p class="type">
                         Glitter+Ash on the Go</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 9:00am&ndash;&#8288;1:00pm<br>
+                        Wednesday, March&nbsp;2, at 9:00 a.m.&ndash;&#8288;1:00 p.m.<br>
                         Downtown Hastings, outside Level Up Games<br>
                         120 2nd St. E., Hastings, MN 55033<br><br>
                         Mask required.
@@ -88,17 +88,17 @@
                     <p class="type">
                         Morning Traditional Ash Wednesday Service &mdash; No Glitter</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 10:30am<br>
+                        Wednesday, March&nbsp;2, at 10:30 a.m.<br>
                         First Presbyterian Church<br>
                         602 Vermillion St., Hastings, MN 55033
                         <br><br>
-                        Traditional service, <strong>not</strong> a glitter+ash service.
+                        Traditional Ash Wednesday service. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-green">
                     <p class="type">Evening Ash Wednesday Service</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 6:46pm<br>
+                        Wednesday, March&nbsp;2, at 6:46 p.m.<br>
                         All Saints Lutheran Church, ELCA<br>
                         8100 Belden Blvd, Cottage Grove, MN 55016<br><br>
                         This service has two stations: one with ashes; another with glitter+ashes.
@@ -243,7 +243,7 @@
                         (coming
                         soon!)</a>
                 </li> -->
-                <li>See the program for the 7:00am morning service
+                <li>See the program for the 7:00 a.m. morning service
                     (coming
                     soon!)</a>
                 </li>
