--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glitter Ash Wednesday</title>
+    <title>Glitter Ash Wednesday Hastings MN</title>
     <link rel="shortcut icon" type="image/jpg" href="images/glitterash_favicon.png">
 
 
