--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <section class="hero">
             <div class="container-page">
                 <!-- <img src="images/AftonIndivisibleLogo_Stacked_ForDarkBackground.png" height=30px> -->
-                <!-- <h1>Afton Indivisible</h1>-->
+               
 
                 <h1 class="hero-text1"> On March&nbsp;2, glitter and ashes show support for the LGBTQ+
-                    community in Hastings, MN.<br><br>Join us.</h1>
+                    community.<br><br>Join us.</h1>
         </section>
     </header>
 
