--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <p class="details">Wednesday, March&nbsp;2, at 7:00&ndash;&#8288;7:30 a.m.<br>
                     Pioneer Park, at the corner of 15th and Pine<br>
                     801 15th St. W., Hastings, MN 55033<br><br>
-                    Short service followed by imposition of ashes.<br><br>
-                    Mask required. In case of bad weather we'll post an update here and move to First
+                    Short service followed by imposition of ashes. Masks are required.<br><br>
+                   In case of bad weather we'll post an update here and move to First
                     Presbyterian Church, Hastings.</p>
                       
                     </p>
@@ -80,13 +80,13 @@
                         Wednesday, March&nbsp;2, at 9:00 a.m.&ndash;&#8288;1:00 p.m.<br>
                         Downtown Hastings, outside Level Up Games<br>
                         120 2nd St. E., Hastings, MN 55033<br><br>
-                        Mask required.
+                        Masks are required.
                     </p>
                   
                 </div>
                 <div class="card border-gradient border-gradient-yellow">
                     <p class="type">
-                        Morning Traditional Ash Wednesday Service &mdash; No Glitter</p>
+                        Morning Traditional Ash Wednesday Service</p>
                     <p class="details">
                         Wednesday, March&nbsp;2, at 10:30 a.m.<br>
                         First Presbyterian Church<br>
@@ -101,7 +101,7 @@
                         Wednesday, March&nbsp;2, at 6:46 p.m.<br>
                         All Saints Lutheran Church, ELCA<br>
                         8100 Belden Blvd, Cottage Grove, MN 55016<br><br>
-                        This service has two stations: one with ashes; another with glitter+ashes.
+                        This service has two stations: one with ashes; another with glitter+ashes. Masks are required.
                     </p>
                 </div>
             </div>
