--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         First Presbyterian Church<br>
                         602 Vermillion St., Hastings, MN 55033
                         <br><br>
-                        Traditional Ash Wednesday service. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
+                        Traditional Ash Wednesday service. Option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-green">
