--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         First Presbyterian Church<br>
                         <a href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">602 Vermillion St., Hastings, MN 55033</a><br><br>
 
-                        Traditional Ash Wednesday service, and the option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
+                        Traditional Ash Wednesday service. Option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-green">
