--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                    
 
                     Short service followed by imposition of ashes. Masks are required.<br><br>
-                   In case of bad weather we'll post an update here and move to First
-                    Presbyterian Church, Hastings.</p>
+                   In case of bad weather we'll post an update here and move to <a class="details" href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">First
+                    Presbyterian Church</a>, Hastings.</p>
                       
                     </p>
                 </div>
